--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "license": "MIT",
   "devDependencies": {
     "@playwright/test": "^1.47.0",
-    "@types/node": "^22.5.4"
+    "@types/node": "^22.5.4",
+    "playwright-bdd": "^7.4.0"
   },
   "scripts": {
-    "test": "yarn playwright test"
-  }
+    "test": "yarn run bddgen && yarn run playwright test --project=chrome"
+  },
+  "dependencies": {}
 }
